@@ -1,3 +1,9 @@
+2012-01-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/44777
+	* profile.c (branch_prob): Split bbs that have exit edge
+	and need a fake entry edge too.
+
 2012-01-05  Jan Hubicka  <jh@suse.cz>
 
 	PR middle-end/49710
